commit first update

--- a/build.gradle
+++ b/build.gradle
@@ -123,5 +123,10 @@ allprojects {
                 password getMavenApiKey()
             }
         }
+
+        //네이버 지도 저장소
+        maven{
+            url 'http://navercorp.bintray.com/maps'
+        }
     }
 }
